<resources>
    <string name="app_name">Stock Hawk</string>

    <string name="pref_stocks_initialized_key" translatable="false">initialized</string>

    <string name="pref_stocks_key">stocks</string>

    <string name="pref_display_mode_key">displayMode</string>
    <string name="pref_display_mode_default">@string/pref_display_mode_percentage_key</string>

    <string name="pref_display_mode_absolute_key">absolute</string>
    <string name="pref_display_mode_percentage_key">percentage</string>

    <string name="default_stocks_yahoo">YHOO</string>
    <string name="default_stocks_apple">AAPL</string>
    <string name="default_stocks_microsoft">MSFT</string>
    <string name="default_stocks_facebook">FB</string>

    <string name="action_change_units">@string/pref_display_mode_key</string>

    <string name="content_description_fab">Add new stock by entering stock symbol</string>

    <string name="dialog_title">Add Stock</string>
    <string name="dialog_hint">Symbol (e.g. GOOG)</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_add">Add</string>

    <string name="error_no_network">No network connectivity! Will load stock cursor when the network is available.</string>
    <string name="error_no_stocks">No stocks added! Hit the floating action button to add one.</string>

    <string name="toast_stock_added_no_connectivity" translatable="false">Please try adding %s when there is internet connection.</string>
    <string name="toast_no_connectivity">Will refresh when network available.</string>

    <string name="stock_symbol_constraint" translatable="false">Stock symbol must consist of one or more alphabetic characters.</string>
    <string name="stock_symbol_exists" translatable="false">%s already exists.</string>
    <string name="internet_connectivity_unavailable" translatable="false">Internet connectivity unavailable. Please try again in some time.</string>

    <string name="error_network" translatable="false">Something went wrong while fetching stocks. Please try again in some time.</string>
    <string name="error_stock_symbol_not_found" translatable="false">%s not found. Please enter a valid symbol.</string>

    <string name="toast_action_ok" translatable="false">OK</string>

    <string name="tap_graph" translatable="false">Tap graph to view stock value at time</string>
    <string name="one_month" translatable="false">1M</string>
    <string name="three_months" translatable="false">3M</string>
    <string name="six_months" translatable="false">6M</string>
    <string name="two_years" translatable="false">2Y</string>
    
    <string name="content_description_one_month" translatable="false">Stock price graph for the past one month</string>
    <string name="content_description_three_months" translatable="false">Stock price graph for the past three months</string>
    <string name="content_description_six_months" translatable="false">Stock price graph for the past six months</string>
    <string name="content_description_two_years" translatable="false">Stock price graph for the past two years</string>

    <string name="key_stats" translatable="false">KEY STATS</string>
    <string name="day_range" translatable="false">Day Range&#58; %s</string>
    <string name="key_stats_open" translatable="false">Open&#58; %s</string>
    <string name="key_stats_prev_close" translatable="false">Prev Close&#58; %s</string>
    <string name="key_stats_volume" translatable="false">Volume&#58; %s</string>
    <string name="key_stats_market_cap" translatable="false">Mkt Cap&#58; %s</string>
    <string name="key_stats_year_low" translatable="false">Yr Low&#58; %s</string>
    <string name="key_stats_year_high" translatable="false">Yr High&#58; %s</string>

    <string name="toast_error_no_internet_connection" translatable="false">No internet connection. Loading stock quotes saved in app.</string>

    <string name="stock_quote_widget_empty_text" translatable="false">No stocks added!</string>

    <string name="stock_quote_delete_successful" translatable="false">%s successful deleted.</string>
    <string name="stock_quote_delete_unsuccessful" translatable="false">Unable to delete %s. Please try again.</string>
</resources>